KTTL-974 - Fix Team Page Spacing

--- a/src/theme/css/frontend/_root.scss
+++ b/src/theme/css/frontend/_root.scss
@@ -76,6 +76,8 @@ body {
 
   &.error404 {
     & > main {
+      @apply flex flex-col;
+
       @screen md-max {
         justify-content: flex-end;
       }
